--- a/css/debug.css
+++ b/css/debug.css
@@ -1,4 +1,8 @@
 .doorbitch-debug {
-	padding:20px;
-	background: rgba(255,100,0,.8);
+	padding: 1rem 2rem;
+    margin: 1rem;
+    position: absolute;
+    bottom: 0;
+    background-color: rgba(255,0,0,.8);
+    color: white;
 }
