added textarea for frontend form html

--- a/css/doorbitch-admin.css
+++ b/css/doorbitch-admin.css
@@ -15,3 +15,7 @@ form#export select {
 form#export input[ type = submit ] {
 	padding: 1rem;
 }
+
+table.form-table textarea#form-html {
+	width:100%;
+}
